deps/v8/test/message/fail/redeclaration1.out
*%(basename)s:6: SyntaxError: Identifier 'foo' has already been declared
let foo = 2;
    ^
SyntaxError: Identifier 'foo' has already been declared

